# GoBench

./: .env.example  .gitignore  AGENTS.md  BENCHMARK.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml  official-submission.yml  public-dev-result.yml
.github/workflows/: public-leaderboard.yml  tests.yml
configs/: katago_gobench_official.cfg
data/: README.md
data/public_dev/: README.md  example_predictions.jsonl  labels.jsonl  positions.jsonl  selfplay_manifest.json
docs/: katago.md  metrics.md  submission.md
docs/social/: x-launch-posts.md
gobench/: cli.py  profiles.py  reporting.py  visualization.py
gobench/api/: main.py  routes.py  schemas.py
gobench/core/: board.py  coordinates.py  legality.py  (+3 more)
leaderboards/: official.md  public-dev.md
models/: gpt-5.4-high.yaml  gpt-5.4-low.yaml  gpt-5.4-medium.yaml  gpt-5.4-xhigh.yaml  gpt-5.5-high.yaml  gpt-5.5-low.yaml  gpt-5.5-medium.yaml  gpt-5.5-xhigh.yaml
prompts/: pure_llm_json_v1.txt  pure_llm_json_v1_fallback.txt
scripts/: make_toy_dataset.py  precompute_labels.py  run_local_server.sh  sync_readme_leaderboards.py  update_public_leaderboard.py
suites/: official_v0_1.yaml  public_dev.yaml  public_dev_fast.yaml
tests/: test_api.py  test_cli_parsing.py  test_coordinates.py  test_katago_analysis_client.py  test_katago_selfplay.py  test_legality.py  test_metrics.py  test_mock_scoring.py  test_profiles.py  test_public_leaderboard.py  test_reporting.py  test_sample_data.py  test_sync_readme_leaderboards.py  test_visualization.py
(+10 files in other folders)
