[project]
name = "gobench"
version = "0.1.0"
description = "Next-move benchmark prototype for LLM Go performance."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "sqlalchemy>=2.0",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
